<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/background_card"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp">

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/author_label"
            style="@style/CardTextTitleStyle.Level1"
            app:layout_constraintEnd_toStartOf="@id/ivBookmark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/date_label"
            style="@style/CardTextTitleStyle.Level2"
            app:layout_constraintEnd_toStartOf="@id/ivBookmark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

        <ImageView
            android:id="@+id/ivBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_bookmark_border_24"
            app:tint="?attr/colorCardIconTint"
            app:layout_constraintEnd_toStartOf="@id/ivBrowser"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivBrowser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_open_in_browser_24"
            app:tint="?attr/colorCardIconTint"
            app:layout_constraintEnd_toStartOf="@id/ivShare"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_share_24"
            app:tint="?attr/colorCardIconTint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:text="@string/title_label"
            style="@style/CardTextContentStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>