<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/detailsFragment"
    tools:context=".feature.detailsscreen.ui.DetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextAppearance="@style/WallpaperToolbarTextAppearance"
            app:expandedTitleTextAppearance="@style/WallpaperToolbarTextAppearance"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/ivWallpaper"
                android:layout_width="match_parent"
                android:layout_height="?attr/heightWallpaperToolbarImage"
                android:scaleType="centerCrop"
                android:src="@drawable/img_wallpaper"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/menu_details"
                app:layout_collapseMode="pin" />

            <View
                android:id="@+id/toolbarScrimTop"
                android:layout_width="match_parent"
                android:layout_height="?attr/heightWallpaperToolbarScrim"
                android:layout_alignBottom="@+id/ivWallpaper"
                android:layout_gravity="top"
                android:background="@drawable/scrim_top" />

            <View
                android:id="@+id/toolbarScrimBottom"
                android:layout_width="match_parent"
                android:layout_height="?attr/heightWallpaperToolbarScrim"
                android:layout_alignBottom="@+id/ivWallpaper"
                android:layout_gravity="bottom"
                android:background="@drawable/scrim_bottom" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_nested"
        app:behavior_overlapTop="?attr/radiusNestedContent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvDetailsAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_label"
                style="@style/NestedTextTitleStyle.Level1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                style="@style/NestedTextTitleStyle.Level2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailsAuthor" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description_label"
                style="@style/NestedTextContentStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailsDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbDetails"
        android:theme="@style/ProgressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>